--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <tr>
                 <td>Football</td>
                 <td>★★★★★</td>
-                <td>Prroblem Solving</td>
+                <td>Problem Solving</td>
                 <td>★★★★</td>
 
             </tr>
