--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </table>
     
         <br>
-        <p>Hi, I am Sairudra More. I am a student of Computer Engineering at <b><i>VIT University, Chennai</i></b>. I am a <em>web developer and a competitive programmer</em>. I am also a member of the <strong>Android and Zero Bugs Club</strong>.</p>
+        <p>Hi, I am Sairudra More. I am a student of Computer Engineering at <b><i>VIT University, Chennai</i></b>. I am a <em>web developer and a competitive programmer</em>. I am also a member of the <strong><a href="https://androidclubvit.com/">Android</a> and <a href="https://zbcvitc.pythonanywhere.com/#0">Zero Bugs Club</a></strong>.</p>
         <hr>
         <h3>My Education</h3>
         <ul>
