--- a/HTML-Personal Site/index.html
+++ b/HTML-Personal Site/index.html
@@ -5,6 +5,23 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Sairudra's Personal Site</title>
+
+    <style>
+        body
+        {
+            background-color: #B1D7B4;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        hr
+        {
+            border-style: none;
+            border-style: dotted none none none;
+            border-width: 5px;
+            border-color: #3D8361;
+            width: 5%;
+        }
+
+    </style>
     </head>
     <body>
         
@@ -15,8 +32,8 @@
                 </td>
                 <td>
                     <h1>Sairudra More</h1>
-        <p>Studying <strong>CSE CORE</strong></p>
-        <p>Sophomore at <strong><a href="https://chennai.vit.ac.in/">VIT Chennai</a></strong></p>
+                    <p>Studying <strong>CSE CORE</strong></p>
+                    <p>Sophomore at <strong><a href="https://chennai.vit.ac.in/">VIT Chennai</a></strong></p>
                 </td>
             </tr>
         </table>
@@ -100,6 +117,5 @@
             </tr>                
         </table>
         <hr>
-        <p>hi</p>
     </body>
 </html>   
