--- a/HTML-Personal Site/index.html
+++ b/HTML-Personal Site/index.html
@@ -5,22 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Sairudra's Personal Site</title>
+        <link rel="stylesheet" href="css/styles.css">
 
     <style>
-        body
-        {
-            background-color: #B1D7B4;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        hr
-        {
-            border-style: none;
-            border-style: dotted none none none;
-            border-width: 5px;
-            border-color: #3D8361;
-            width: 5%;
-        }
-
     </style>
     </head>
     <body>
