--- a/HTML-Personal Site/Contact.html
+++ b/HTML-Personal Site/Contact.html
@@ -5,6 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact Details</title>
+        <link rel="stylesheet" href="css/styles.css">
+
     </head>
     <body>
         <center>
@@ -32,7 +34,7 @@
             <label>Your Message:</label><br>
             <textarea name="YourMessage" id=""  value="" rows="10" cols="30" placeholder="Enter your message"></textarea>
             <br>
-            <input type="submit" name=""placeholder="submit">
+            <input type="submit" name="" placeholder="submit">
         </form>
     </body>
 </html> 
