--- a/HTML-Personal Site/index.html
+++ b/HTML-Personal Site/index.html
@@ -20,7 +20,7 @@
                 <td>
                     <h1>Sairudra More</h1>
                     <p>Studying <strong>CSE CORE</strong></p>
-                    <p>Sophomore at <strong><a href="https://chennai.vit.ac.in/">VIT Chennai</a></strong></p>
+                    <p>ophomore at <strong><a href="https://chennai.vit.ac.in/">VIT Chennai</a></strong></p>
                 </td>
             </tr>
         </table>
