--- a/Hobbies.html
+++ b/Hobbies.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Hobbies</title>
+    <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
     <center><h1>My Hobbies</h1></center>
+   
     <ol>
         <li>Playing Football</li>
         <li>Track and Field Athelet</li>
         <li>Martial Arts</li>
     <ol>
+    
 </body>
 </html>
