--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h3>My Education</h3>
         <ul>
             <li>Studying at <b><a href="https://chennai.vit.ac.in/">VIT Chennai</a></b></li>
-            <li>Completed my schooling at <b><a href="https://www.ryangroup.org/ryaninternational/icse/bangalore/ryan-international-school-kundalahalli">Ryan International School and St. Thomas Public School</a></b></li>
+            <li>Completed my schooling at <b><a href="https://www.ryangroup.org/ryaninternational/icse/bangalore/ryan-international-school-kundalahalli">Ryan International School</a></b> and St. Thomas Public School</li>
         </ul>
         <hr>
         <h3><a href="Hobbies.html">My Hobbies</a></h3>
