--- a/HTML-Personal Site/Contact.html
+++ b/HTML-Personal Site/Contact.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact Details</title>
         <link rel="stylesheet" href="css/styles.css">
-
+        <link rel="icon" href="favicon_Contact.ico">
     </head>
     <body>
         <center>
