--- a/HTML-Personal Site/Hobbies.html
+++ b/HTML-Personal Site/Hobbies.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Hobbies</title>
     <link rel="stylesheet" href="css/styles.css">
-
+    <link rel="icon" href="hobbies_football.ico">
 </head>
 <body>
     <center><h1>My Hobbies</h1></center>
