--- a/HTML-Personal Site/index.html
+++ b/HTML-Personal Site/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Sairudra's Personal Site</title>
         <link rel="stylesheet" href="css/styles.css">
-
+        <link rel="icon" href="favicon.ico">
     <style>
     </style>
     </head>
@@ -20,7 +20,7 @@
                 <td>
                     <h1>Sairudra More</h1>
                     <p>Studying <strong>CSE CORE</strong></p>
-                    <p>ophomore at <strong><a href="https://chennai.vit.ac.in/">VIT Chennai</a></strong></p>
+                    <p>Sophomore at <strong><a href="https://chennai.vit.ac.in/">VIT Chennai</a></strong></p>
                 </td>
             </tr>
         </table>
@@ -30,8 +30,8 @@
         <hr>
         <h3>My Education</h3>
         <ul>
-            <li>Studying at <b><a href="https://chennai.vit.ac.in/">VIT Chennai</a></b></li>
-            <li>Completed my schooling at <b><a href="https://www.ryangroup.org/ryaninternational/icse/bangalore/ryan-international-school-kundalahalli">Ryan International School</a></b></li>
+            <li>tudying at <b><a href="https://chennai.vit.ac.in/">VIT Chennai</a></b></li>
+            <li>Completed my schooling at <b><a href="https://www.ryangroup.org/ryaninternational/icse/bangalore/ryan-international-school-kundalahalli">Ryan International School</a></b> and St. Thomas Public School</li>
         </ul>
         <hr>
         <h3><a href="Hobbies.html">My Hobbies</a></h3>
